<resources>
    <string name="app_name">Lube &amp; Tangerines</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sardell">Apelsin</string>
    <string name="tuunikala">Tuunikala</string>
    <string name="kr_psud">Krõpsud</string>
    <string name="lu">Õlu</string>
    <string name="piim">Piim</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="wishpiles">Wishpiles</string>
    <string name="shopping_list">Shopping list</string>
    <string name="naw_share">Nav share</string>
    <string name="Share">Share</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="enter_a_new_item">Enter a new item:</string>
    <string name="hint">hint</string>
    <string name="password_hint" />
</resources>
